# Enolemumi-Service

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
Datas/: 2021-11-01_lemums_par_ierosinasanu.pdf#search=  2021-11-01_lemums_par_tiesvedibas_izbeigsanu.pdf#search=  2021-12-03_Spriedums.pdf#search=  2021-12-03_lemums_par_ierosinasanu.pdf#search=  2021-18-01_Spriedums.pdf#search=  2021-18-01_lemums_par_ierosinasanu.pdf#search=  2021-22-01_Spriedums.pdf#search=  2021-23-01_Spriedums.pdf#search=  2021-23-01_lemums_par_ierosinasanu-2.pdf#search=  2021-24-03_lemums_par_ierosinasanu-1.pdf#search=  2021-25-03_Spriedums.pdf#search=  2021-25-03_lemums_par_ierosinasanu.pdf#search=  2021-27-01_Spriedums.pdf#search=  2021-27-01_lemums_par_ierosinasanu.pdf#search=  2021-31-0103_Spriedums.pdf#search=  2021-31-0103_lemums_par_ierosinasanu.pdf#search=  2021-32-0103_Spriedums.pdf#search=  2021-32-0103_lemums_par_ierosinasanu.pdf#search=  2021-33-0103_Spriedums.pdf#search=  2021-33-0103_lemums_par_ierosinasanu.pdf#search=  2021-34-01_lemums_par_ierosinasanu.pdf#search=  2021-34-01_lemums_par_tiesvedibas_izbeigsanu.pdf#search=  2021-36-01_Spriedums.pdf#search=  2021-38-01_Spriedums.pdf#search=  2021-38-01_lemums_par_ierosinasanu.pdf#search=  2021-40-0103_Spriedums.pdf#search=  2021-40-0103_lemums_par_ierosinasanu.pdf#search=  2021-41-01_Spriedums.pdf#search=  2021-41-01_lemums_par_ierosinasanu.pdf#search=  2021-42-01_Spriedums.pdf#search=  2021-42-01_lemums_par_ierosinasanu.pdf#search=  2021-43-01_Spriedums.pdf#search=  2021-43-01_lemums_par_ierosinasanu.pdf#search=  (+7 more)
(+47 files in other folders)
