[tool.poetry]
name = "enolemumi-service"
version = "0.1.0"
description = ""
authors = ["Alchemist <blcklptn@gmail.com>"]
readme = "README.md"
packages = [{include = "enolemumi_service"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
