[tool.poetry]
name = "enolemumi-service"
version = "0.1.0"
description = ""
authors = ["Alchemist <blcklptn@gmail.com>"]
readme = "README.md"
packages = [{include = "enolemumi_service"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
psycopg2-binary = "^2.9.5"
pydantic = "^1.10.4"
python-dotenv = "^0.21.1"
django-static-precompiler = "^2.4"
selenium = "^4.8.0"
pathlib = "^1.0.1"
requests = "^2.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
